@@ -1123,27 +1123,5 @@ class tx_transactor_api {
 
         return round($float, $level);
     }
-
-
-    static public function getListenerExtKey (
-    ) {
-        $result = '';
-
-        if (
-            isset($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['transactor']['listener']) &&
-            is_array($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['transactor']['listener'])
-        ) {
-            foreach ($GLOBALS['TYPO3_CONF_VARS']['EXTCONF']['transactor']['listener'] as $extKey => $classRef) {
-                if ($extKey != '') {
-                    $result = $extKey;
-                    // Todo: Determine the extension key from the plugins of the current page and by Typoscript settings
-
-                    break;
-                }
-            }
-        }
-
-        return $result;
-    }
 }
 
